Resolving mobile overlap issue

--- a/my-portfolio/src/pages/experience/experience.css
+++ b/my-portfolio/src/pages/experience/experience.css
@@ -88,7 +88,7 @@
 /* Mobile CSS */
 .experience-mobile-container {
   padding: 10px;
-  padding-top: 80px;
+  padding-top: 100px;
 }
 
 .experience-mobile-title {
